actualización primera evaluación

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,33 +1,38 @@
-.sesion-container {
-    width: 100%;
-    background-color: #eb445a;
-    border-bottom-right-radius: 20px;
-    height: 150px;
-    display: flex;
-    align-items: center;
-}
+ion-content {
+    --overflow: hidden;
 
-.sesion-container ion-item {
-    background-color: #eb445a;
-}
+    .sesion-container {
+        width: 100%;
+        background-color: #eb445a;
+        border-bottom-right-radius: 20px;
+        height: 150px;
+        display: flex;
+        align-items: center;
+    }
+    
+    .sesion-container ion-item {
+        background-color: #eb445a;
+    }
+    
+    .sesion-container img {
+        width: 100px;
+    }
+    
+    .sesion-container ion-label {
+        font-size: 1.2rem;
+    }
 
-.sesion-container img {
-    width: 100px;
-}
-
-.sesion-container ion-label {
-    font-size: 1.2rem;
-}
-
-ion-list {
-    margin-top: 20px;
-}
-
-ion-item {
-    padding: 20px 0px; 
-    font-size: 1.2rem;
-}
-
-ion-item ion-icon {
-    padding-right: 15px;
+    ion-list {
+        height: 100vh;
+        
+        ion-item {
+            padding: 20px 0px; 
+            font-size: 1.2rem;
+        }
+        
+        ion-item ion-icon {
+            padding-right: 15px;
+        }
+    }
+    
 }
