--- a/src/app/components/piepagina/piepagina.component.html
+++ b/src/app/components/piepagina/piepagina.component.html
@@ -1,7 +1,7 @@
 <ion-footer class="ion-no-border">
   <ion-toolbar>
-    <ion-title>
-      <h2 class="ion-padding-bottom">DuocDriver</h2>
+    <ion-title color="danger">
+      <h2 class="ion-padding-bottom">&copy;DuocDriver</h2>
     </ion-title>
   </ion-toolbar>
 </ion-footer>
