--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <ion-app>
   <ion-menu side="start" type="push" contentId="main">
-    <ion-content>
+    <ion-content overflow="false">
       <div class="container ion-padding sesion-container">
         <ion-item color="danger">
           <ion-avatar slot="end">
             <img src="https://png.pngtree.com/png-vector/20190909/ourlarge/pngtree-outline-user-icon-png-image_1727916.jpg">
           </ion-avatar>
-          <ion-label>Nombre Usuario</ion-label>
+          <ion-label>Peter Parker</ion-label>
         </ion-item>
       </div>
-      <div class="list-container">
+      <div id="list-container">
         <ion-menu-toggle>
           <ion-list lines="none">
             <ion-item>
@@ -18,13 +18,13 @@
             <ion-item>
               <ion-icon name="card-outline"></ion-icon>Mi billetera
             </ion-item>
-            <ion-item>
+            <ion-item routerLink="../help">
               <ion-icon name="help-outline"></ion-icon>Ayuda
             </ion-item>
             <ion-item>
               <ion-icon name="checkmark-circle-outline"></ion-icon>Centro de seguridad
             </ion-item>
-            <ion-item>
+            <ion-item routerLink="../contact">
               <ion-icon name="call-outline"></ion-icon>Contacto DuocDriver
             </ion-item>
           </ion-list>
