Pagina restablrecer contraseña

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -26,7 +26,7 @@
       Iniciar sesión
     </ion-button>
     <div class="ion-margin-top">
-      <a routerLink="/">Olvidaste tu contraseña?</a>
+      <a routerLink="../forgetpassword">Olvidaste tu contraseña?</a>
     </div>
   </form>
 </ion-content>
