--- a/src/app/pages/forgetpassword/forgetpassword.page.html
+++ b/src/app/pages/forgetpassword/forgetpassword.page.html
@@ -12,25 +12,15 @@
   <div id="header">
     <h1>Restablecer contraseña</h1>
   </div>
-  <form #forgetform="ngForm" (ngSubmit)="onSubmitEmail()" align="center">
+  <form #forgetform="ngForm" align="center">
     <ion-item>
       <ion-label position="floating">Correo electrónico</ion-label>
-      <ion-input type=text name="email" required></ion-input>
+      <ion-input type=text name="email" required [(ngModel)]="email"></ion-input>
     </ion-item>
-    <ion-button type="submit" shape="round" color="danger" [disabled]="forgetform.invalid">
-      Enviar codigo a correo
+    <ion-button type="submit" shape="round" color="danger" [disabled]="forgetform.invalid" (click)=resetPassword()>
+      Enviar enlace
     </ion-button>
   </form>
-  <div class="ion-margin-top codigo-container">
-    <form (ngSubmit)="onSubmitCode()" align="center">
-      <ion-item>
-        <ion-label position="floating">Ingresar código</ion-label>
-        <ion-input type=text name="code" required></ion-input>
-      </ion-item>
-      <ion-button type="submit" shape="round" color="primary">
-        Enviar código  &#x2192;
-      </ion-button>
-    </form>
-  </div>
+  <p style="text-align: center;">Por favor ingrese su correo electrónico para enviar correo con enlace para restablecer su contraseña</p>
 </ion-content>
 <app-piepagina></app-piepagina>
