--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,7 +4,7 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end" class="ion-padding-end">
-      <ion-button routerLink="../register">Registrate</ion-button>
+      <ion-button [routerLink]="['/noaccount']">Inicio</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -13,21 +13,20 @@
   <div id="header">
     <h1>Inicio de sesión</h1>
   </div>
-  <form #miformulario="ngForm" id='form' align='center' (ngSubmit)="onSubmit()">
+  <form #miformulario="ngForm" id='form' align='center' (ngSubmit)="login()">
     <ion-item>
       <ion-label position="floating">Correo electrónico</ion-label>
-      <ion-input type=text name="email" required [(ngModel)]="user.email"></ion-input>
+      <ion-input type=text name="email" required [(ngModel)]="email"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Contraseña</ion-label>
-      <ion-input type=password name="password" required [(ngModel)]="user.password"></ion-input>
+      <ion-input type=password name="password" required [(ngModel)]="password"></ion-input>
     </ion-item>
-    <ion-button type="submit" shape="round" color="danger" [disabled]="miformulario.invalid" class="animate__animated animate__fadeInRight">
-      Iniciar sesión
-    </ion-button>
     <div class="ion-margin-top">
       <a routerLink="../forgetpassword">Olvidaste tu contraseña?</a>
     </div>
+    <ion-button type="submit" color="danger" fill="outline">Iniciar sesión</ion-button>
+    <p>Aún no estás registrado?</p>
+    <ion-button color="primary" fill="outline" [routerLink]="['/register']">Registrate Aquí</ion-button>
   </form>
 </ion-content>
-<app-piepagina></app-piepagina>
