--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -4,7 +4,7 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end" class="ion-padding-end">
-      <ion-button routerLink="../home">Inicio</ion-button>
+      <ion-button [routerLink]="['/noaccount']">Inicio</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -13,26 +13,26 @@
   <div id="header">
     <h1>Crea tu cuenta</h1>
   </div>
-  <form id='form' align='center'>
+  <form #signupform="ngForm" id='form' align='center' (ngSubmit)="register()" [FormGroup]="registerForm">
     <ion-item>
       <ion-label position="floating">Nombre</ion-label>
-      <ion-input type=text name="email"></ion-input>
+      <ion-input type="text" [(ngModel)]="name" name="name" required></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Correo electrónico</ion-label>
-      <ion-input type=text name="email"></ion-input>
+      <ion-input type="email" [(ngModel)]="email" name="email" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Telefono</ion-label>
+      <ion-input type="tel" [(ngModel)]="phone" name="phone" required></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Contraseña</ion-label>
-      <ion-input type=password name="password"></ion-input>
+      <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
     </ion-item>
-    <ion-item>
-      <ion-label position="floating">Repite contraseña</ion-label>
-      <ion-input type=password name="password"></ion-input>
-    </ion-item>
-    <ion-button type="submit" shape="round" color="danger">
-      Registrate
-    </ion-button>
+    <ion-button type="submit" color="danger" fill="outline">Registrate</ion-button>
+    <div class="ion-margin-top">
+      <a [routerLink]="['/login']">Ya tienes una cuenta?</a>
+    </div>
   </form>
 </ion-content>
-<app-piepagina></app-piepagina>
