--- a/src/app/pages/forgetpassword/forgetpassword.page.html
+++ b/src/app/pages/forgetpassword/forgetpassword.page.html
@@ -21,6 +21,6 @@
       Enviar enlace
     </ion-button>
   </form>
-  <p style="text-align: center;">Por favor ingrese su correo electrónico para enviar correo con enlace para restablecer su contraseña</p>
+  <p style="text-align: center;">Por favor ingrese su correo electrónico, se le enviará un enlace para poder restablecer su contraseña</p>
 </ion-content>
 <app-piepagina></app-piepagina>
