--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -13,7 +13,7 @@
   <div id="header">
     <h1>Crea tu cuenta</h1>
   </div>
-  <form #signupform="ngForm" id='form' align='center' (ngSubmit)="register()" [FormGroup]="registerForm">
+  <form #signupform="ngForm" id='form' align='center' (ngSubmit)="register()">
     <ion-item>
       <ion-label position="floating">Nombre</ion-label>
       <ion-input type="text" [(ngModel)]="name" name="name" required></ion-input>
