--- a/src/app/pages/forgetpassword/forgetpassword.page.html
+++ b/src/app/pages/forgetpassword/forgetpassword.page.html
@@ -17,7 +17,7 @@
       <ion-label position="floating">Correo electrónico</ion-label>
       <ion-input type=text name="email" required [(ngModel)]="email"></ion-input>
     </ion-item>
-    <ion-button type="submit" shape="round" color="danger" [disabled]="forgetform.invalid" (click)=resetPassword()>
+    <ion-button type="submit" shape="round" color="danger" (click)=resetPassword()>
       Enviar enlace
     </ion-button>
   </form>
