--- a/src/app/pages/crear-viaje/crear-viaje.page.html
+++ b/src/app/pages/crear-viaje/crear-viaje.page.html
@@ -30,6 +30,6 @@
       <ion-label position="floating">Capacidad del vehiculo?</ion-label>
       <ion-input type="number" [(ngModel)]="capacity" name="capacity" required></ion-input>
     </ion-item>
-    <ion-button type="submit" color="danger" fill="outline">Crear viaje</ion-button>
+    <ion-button type="submit" color="danger" fill="outline" class="ion-margin-top">Crear viaje</ion-button>
   </form>
 </ion-content>
