--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -26,9 +26,8 @@ ion-content {
   }
 
   ion-icon {
-    font-size: 60px;
+    font-size: 50px;
   }
-
 }
 
 #container {
@@ -70,6 +69,7 @@ ion-content {
 
 .welcome-container {
   margin-top: 30px;
+  color: white;
 }
 
 ion-menu-button {
