--- a/src/app/pages/solicitar-viaje/solicitar-viaje.page.scss
+++ b/src/app/pages/solicitar-viaje/solicitar-viaje.page.scss
@@ -9,6 +9,24 @@ ion-content {
             flex-direction: column;
         }
     }
+
+    #header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        h1 {
+            font-weight: 700;
+            font-size: 26px;
+            color: #eb445a;
+            margin-bottom: 20px;
+            margin-top: 20px;
+        }
+    }
+
+    ion-searchbar {
+        border-radius: 50px;
+    }
 }
 
 #price {
