--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,11 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.custom-modal .modal-wrapper {
+    position: fixed;
+    bottom: 0;
+    --height: 55%;
+    border-radius: 20px 20px 0 0 !important;
+    --background: transparent;
+}
