--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -18,7 +18,7 @@
     </h6>
   </ion-text>
   <div align="center">
-    <ion-button class="edit-button ion-margin" color="primary" fill="outline">
+    <ion-button class="edit-button ion-margin" color="primary">
       Confirmar Viaje
     </ion-button>
   </div>
