--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -17,11 +17,11 @@
         <h1 color="light" id="welcome">¡Bienvenid@</h1>
         <h1 color="light" >{{ user?.userName }}!</h1>
       </ion-text>
-      <ion-button class="login-button" color="danger" fill="outline" [routerLink]="['/solicitar-viaje']">
+      <ion-button class="login-button" color="danger" [routerLink]="['/solicitar-viaje']">
         Solicitar viaje
       </ion-button>
       <div class="ion-padding-top">
-        <ion-button class="register-button" color="primary" [routerLink]="['/crear-viaje']" fill="outline">
+        <ion-button class="register-button" color="primary" [routerLink]="['/crear-viaje']">
           Crear viaje
         </ion-button>
       </div>
