--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -22,9 +22,9 @@
       <ion-label position="floating">Contraseña</ion-label>
       <ion-input type=password name="password" required [(ngModel)]="password"></ion-input>
     </ion-item>
-    <ion-button type="submit" color="danger" fill="outline">Iniciar sesión</ion-button>
+    <ion-button type="submit" color="danger">Iniciar sesión</ion-button>
     <p>Aún no estás registrado?</p>
-    <ion-button color="primary" fill="outline" [routerLink]="['/register']">Registrate Aquí</ion-button>
+    <ion-button color="primary" [routerLink]="['/register']">Registrate Aquí</ion-button>
     <div class="ion-margin-top">
       <a routerLink="../forgetpassword">Olvidaste tu contraseña?</a>
     </div>
