--- a/src/app/pages/noaccount/noaccount.page.html
+++ b/src/app/pages/noaccount/noaccount.page.html
@@ -11,13 +11,13 @@
         </ion-text>
       </div>
       <div class="container ion-padding" lines="">
-        <ion-button class="register-button" color="primary" routerLink="../register" fill="outline">
+        <ion-button class="register-button" color="primary" routerLink="../register">
           Crear una cuenta
         </ion-button>
         <br>
         <span class="already">Tienes una cuenta?</span>
         <div class="ion-padding-top">
-          <ion-button class="login-button" color="danger" routerLink="../login" fill="outline">
+          <ion-button class="login-button" color="danger" routerLink="../login">
             Iniciar sesión
           </ion-button>
         </div>
