--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -30,7 +30,7 @@
       <ion-label position="floating">Contraseña</ion-label>
       <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
     </ion-item>
-    <ion-button type="submit" color="danger" fill="outline">Registrate</ion-button>
+    <ion-button type="submit" color="danger">Registrate</ion-button>
     <div class="ion-margin-top">
       <a [routerLink]="['/login']">Ya tienes una cuenta?</a>
     </div>
