--- a/src/app/pages/solicitar-viaje/solicitar-viaje.page.html
+++ b/src/app/pages/solicitar-viaje/solicitar-viaje.page.html
@@ -10,8 +10,7 @@
 </ion-header>
 <ion-content>
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content
-      refreshingSpinner="circles">
+    <ion-refresher-content refreshingSpinner="circles">
     </ion-refresher-content>
   </ion-refresher>
   <div id="header">
@@ -19,7 +18,8 @@
   </div>
   <ion-searchbar class="ion-padding" [(ngModel)]="searchTerm" animated placeholder="Busca tu destino"></ion-searchbar>
   <div *ngFor="let viaje of viajes | filter:searchTerm">
-    <ion-card class="ion-margin-top" *ngIf="viaje.active === true" (click)="viewTrip(viaje.tripId, viaje.userName, viaje.userEmail, viaje.userPhone, viaje.capacity, viaje.tripPrice, viaje.tripStart, viaje.tripEnd)">
+    <ion-card class="ion-margin-top" *ngIf="viaje.active === true"
+      (click)="viewTrip(viaje.tripId, viaje.userName, viaje.userEmail, viaje.userPhone, viaje.capacity, viaje.tripPrice, viaje.tripStart, viaje.tripEnd)">
       <div class="ion-padding-start">
         <ion-text>
           <h5 color="light">
