--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -1,7 +1,8 @@
 <ion-card class="ion-padding">
   <ion-text>
     <h4>
-      <ion-icon name="car-outline" class="ion-padding-end"></ion-icon>{{ start }} <ion-icon name="arrow-forward-outline">
+      <ion-icon name="car-outline" class="ion-padding-end"></ion-icon>{{ start }} <ion-icon
+        name="arrow-forward-outline">
       </ion-icon> {{ end }}
     </h4>
     <h6>
@@ -18,7 +19,8 @@
     </h6>
   </ion-text>
   <div align="center">
-    <ion-button class="edit-button ion-margin" color="primary">
+    <ion-button class="edit-button ion-margin" color="primary" (click)="confirmarViaje()"
+      href="https://api.whatsapp.com/send?phone=+56{{ phone }}&text=Hola,%20soy%20{{ pasajero?.userName }}, quiero confirmar mi lugar en el viaje">
       Confirmar Viaje
     </ion-button>
   </div>
