--- a/src/app/pages/crear-viaje/crear-viaje.page.scss
+++ b/src/app/pages/crear-viaje/crear-viaje.page.scss
@@ -39,4 +39,13 @@
         font-size: 1.2rem;
         margin-top: 40px;
     }
+
+    ion-select {
+        width: 80% !important;
+        height: 80% !important;
+    }
+
+    .label {
+        visibility: hidden;
+    }
 }
