--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -19,8 +19,7 @@
     </h6>
   </ion-text>
   <div align="center">
-    <ion-button class="edit-button ion-margin" color="primary" (click)="confirmarViaje()"
-      href="https://api.whatsapp.com/send?phone=+56{{ phone }}&text=Hola,%20soy%20{{ pasajero?.userName }}, quiero confirmar mi lugar en el viaje">
+    <ion-button class="edit-button ion-margin" color="primary" (click)="confirmarViaje()">
       Confirmar Viaje
     </ion-button>
   </div>
