--- a/src/app/pages/solicitar-viaje/solicitar-viaje.page.html
+++ b/src/app/pages/solicitar-viaje/solicitar-viaje.page.html
@@ -18,7 +18,7 @@
   </div>
   <ion-searchbar class="ion-padding" [(ngModel)]="searchTerm" animated placeholder="Busca tu destino"></ion-searchbar>
   <div *ngFor="let viaje of viajes | filter:searchTerm">
-    <ion-card class="ion-margin-top" *ngIf="viaje.active === true"
+    <ion-card class="ion-margin-top" *ngIf="viaje.active !== false"
       (click)="viewTrip(viaje.tripId, viaje.userName, viaje.userEmail, viaje.userPhone, viaje.capacity, viaje.tripPrice, viaje.tripStart, viaje.tripEnd)">
       <div class="ion-padding-start">
         <ion-text>
