--- a/src/app/pages/crear-viaje/crear-viaje.page.html
+++ b/src/app/pages/crear-viaje/crear-viaje.page.html
@@ -35,6 +35,7 @@
       <ion-label class="label" position="floating">Selecciona el destino de tu viaje</ion-label>
       <ion-select [interfaceOptions]="customActionSheetOptions" interface="alert" placeholder="Selecciona el destino"
         [(ngModel)]="end" name="end" required>
+        <ion-select-option value="Mall del Centro">Duoc UC</ion-select-option>
         <ion-select-option value="Mall del Centro">Mall del Centro</ion-select-option>
         <ion-select-option value="Plaza de la Independencia">Plaza de la Independencia</ion-select-option>
         <ion-select-option value="Mall Mirador Bio-Bio">Mall Mirador Bio-Bio</ion-select-option>
